--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ volumes:
 
 services:
     postgres:
-        image: mdillon/postgis:10-alpine
+        image: postgis/postgis:12-3.1-alpine
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=postgres
