Use official postgres image instead of postgis/postgis
The postgis/postgis images are amd64-only and aren't performant on an
M1 Mac.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,8 @@ volumes:
 
 services:
     postgres:
-        image: postgis/postgis:12-3.1-alpine
+        build:
+            dockerfile: bycycle-postgres/Dockerfile
         environment:
             - POSTGRES_USER=postgres
             - POSTGRES_PASSWORD=postgres
